# LolUpdator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
CMake/modules/: FindMySql.cmake
include/: ApiDataTypes.hpp  Elophant.hpp  Report.hpp  Summoner.hpp  logic.hpp
src/: ApiDataTypes.cpp  Elophant.cpp  Report.cpp  Summoner.cpp  logic.cpp  main.cpp
